--- a/trn03/index.html
+++ b/trn03/index.html
@@ -224,7 +224,9 @@
                 <li>
                   <a href="">
                     <div class="img_bg">
-                      <img src="./img/item01.jpg" alt="" />
+                      <div class="img_inner">
+                        <img src="./img/item01.jpg" alt="" />
+                      </div>
                     </div>
                     <h3>프레스코 미트 스파게티소스</h3>
                     <strong>#조미소스 #식품</strong>
@@ -233,7 +235,9 @@
                 <li>
                   <a href="">
                     <div class="img_bg">
-                      <img src="./img/item04.jpg" alt="" />
+                      <div class="img_inner">
+                        <img src="./img/item04.jpg" alt="" />
+                      </div>
                     </div>
                     <h3>컵누들 로제맛</h3>
                     <strong>#라면류 #컵누들</strong>
@@ -242,7 +246,9 @@
                 <li>
                   <a href="">
                     <div class="img_bg">
-                      <img src="./img/item05.jpg" alt="" />
+                      <div class="img_inner">
+                        <img src="./img/item05.jpg" alt="" />
+                      </div>
                     </div>
                     <h3>진라면</h3>
                     <strong>#라면류 #진라면 매운맛</strong>
@@ -251,7 +257,53 @@
                 <li>
                   <a href="">
                     <div class="img_bg">
-                      <img src="./img/item06.jpg" alt="" />
+                      <div class="img_inner">
+                        <img src="./img/item06.jpg" alt="" />
+                      </div>
+                    </div>
+                    <h3>컵누들 매콤찜닭맛 컵</h3>
+                    <strong>#라면류 #컵누들</strong>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <div class="img_bg">
+                      <div class="img_inner">
+                        <img src="./img/item01.jpg" alt="" />
+                      </div>
+                    </div>
+                    <h3>프레스코 미트 스파게티소스</h3>
+                    <strong>#조미소스 #식품</strong>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <div class="img_bg">
+                      <div class="img_inner">
+                        <img src="./img/item04.jpg" alt="" />
+                      </div>
+                    </div>
+                    <h3>컵누들 로제맛</h3>
+                    <strong>#라면류 #컵누들</strong>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <div class="img_bg">
+                      <div class="img_inner">
+                        <img src="./img/item05.jpg" alt="" />
+                      </div>
+                    </div>
+                    <h3>진라면</h3>
+                    <strong>#라면류 #진라면 매운맛</strong>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <div class="img_bg">
+                      <div class="img_inner">
+                        <img src="./img/item06.jpg" alt="" />
+                      </div>
                     </div>
                     <h3>컵누들 매콤찜닭맛 컵</h3>
                     <strong>#라면류 #컵누들</strong>
@@ -262,100 +314,96 @@
           </div>
         </div>
         <div class="blog-slider__item swiper-slide recipe">
-          <div class="sec_tit">
-            <h2>O'Kitchen</h2>
-            <p>오뚜기가 제안하는 맛있고 건강한 요리</p>
-          </div>
-          <div class="content">
-            <div class="con_left">
-              <ul>
-                <li>
-                  <a href="">
-                    <img src="" alt="" />
-                    <div class="bg_txt ray">
-                      <dl class="tit">
-                        <dt>비빔만두</dt>
-                        <dd>
-                          <img src="./img/recipe01.png" alt="" />
-                        </dd>
-                      </dl>
-
-                      <div class="bg_l">
-                        <a href="" class="bg_inner">
-                          <ul>
-                            <li>만두</li>
-                            <li>야식</li>
-                          </ul>
-                        </a>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="">
-                    <img src="" alt="" />
-                    <div class="bg_txt ray">
-                      <dl class="tit">
-                        <dt>카레 토마토솥밥</dt>
-                        <dd>
-                          <img src="./img/recipe02.png" alt="" />
-                        </dd>
-                      </dl>
-
-                      <div class="bg_l">
-                        <a href="" class="bg_inner">
-                          <ul>
-                            <li>#토마토</li>
-                            <li>#솥밥</li>
-                            <li>#카레</li>
-                            <li>#건강</li>
-                          </ul>
-                        </a>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-              </ul>
-              <ul>
-                <li>
-                  <a href="">
-                    <img src="" alt="" />
-                    <div class="bg_txt ray">
-                      <dl class="tit">
-                        <dt>순두부 열라면</dt>
-                        <dd>
-                          <img src="./img/recipe02.png" alt="" />
-                        </dd>
-                      </dl>
-
-                      <div class="bg_l">
-                        <a href="" class="bg_inner">
-                          <ul>
-                            <li>#순두부</li>
-                            <li>#열라면</li>
-                            <li>#역주행</li>
-                            <li>#매운맛</li>
-                            <li>#화끈</li>
-                          </ul>
-                        </a>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-              </ul>
+          <div class="inner">
+            <div class="sec_tit">
+              <h2>O'Kitchen</h2>
+              <p>오뚜기가 제안하는 맛있고 건강한 요리</p>
             </div>
-            <div class="con_right">
-              <a href="../category/tip.asp">
-                <h2>
-                  <span>오뚜기의</span>
-                  <span>쉽고 간단한</span>
-                  <span><strong>계량 꿀팁!</strong></span>
-                </h2>
-                <p>
-                  <span>밥숟가락, 종이컵으로 </span>
-                  <span>간단하고 쉽게 알려드립니다.</span>
-                </p>
-              </a>
+            <div class="content flex">
+              <div class="con_left flex">
+                <ul>
+                  <li>
+                    <a href="">
+                      <div class="bg_txt ray">
+                        <dl class="tit">
+                          <dt>비빔만두</dt>
+                          <dd>
+                            <img src="./img/recipe01.png" alt="" />
+                          </dd>
+                        </dl>
+                        <div class="bg_l">
+                          <div class="bg_inner">
+                            <ul>
+                              <li>만두</li>
+                              <li>야식</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <div class="bg_txt ray">
+                        <dl class="tit">
+                          <dt>카레 토마토솥밥</dt>
+                          <dd>
+                            <img src="./img/recipe02.png" alt="" />
+                          </dd>
+                        </dl>
+                        <div class="bg_l">
+                          <div class="bg_inner">
+                            <ul>
+                              <li>#토마토</li>
+                              <li>#솥밥</li>
+                              <li>#카레</li>
+                              <li>#건강</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+                <ul>
+                  <li>
+                    <a href="">
+                      <div class="bg_txt ray">
+                        <dl class="tit">
+                          <dt>순두부 열라면</dt>
+                          <dd>
+                            <img src="./img/recipe02.png" alt="" />
+                          </dd>
+                        </dl>
+                        <div class="bg_l">
+                          <div class="bg_inner">
+                            <ul>
+                              <li>#순두부</li>
+                              <li>#열라면</li>
+                              <li>#역주행</li>
+                              <li>#매운맛</li>
+                              <li>#화끈</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="con_right">
+                <a href="../category/tip.asp">
+                  <h2>
+                    <span>오뚜기의</span>
+                    <span>쉽고 간단한</span>
+                    <span><strong>계량 꿀팁!</strong></span>
+                  </h2>
+                  <p>
+                    <span>밥숟가락, 종이컵으로 </span>
+                    <span>간단하고 쉽게 알려드립니다.</span>
+                  </p>
+                </a>
+              </div>
             </div>
           </div>
         </div>
