--- a/trn03/index.html
+++ b/trn03/index.html
@@ -418,22 +418,22 @@
             <div class="tab_top">
               <div class="js-marquee on">
                 <div class="flex">
-                  <span><img src="./img/visual01.jpg" /></span>
-                  <span><img src="./img/visual02.jpg" /></span>
-                  <span><img src="./img/visual03.jpg" /></span>
-                  <span><img src="./img/visual01.jpg" /></span>
-                  <span><img src="./img/visual02.jpg" /></span>
-                  <span><img src="./img/visual03.jpg" /></span>
+                  <span class="r"><img src="./img/visual01.jpg" /></span>
+                  <span class="r"><img src="./img/visual02.jpg" /></span>
+                  <span class="r"><img src="./img/visual03.jpg" /></span>
+                  <span class="r"><img src="./img/visual01.jpg" /></span>
+                  <span class="r"><img src="./img/visual02.jpg" /></span>
+                  <span class="r"><img src="./img/visual03.jpg" /></span>
                 </div>
               </div>
-              <div class="js-marquee flex">
+              <div class="js-marquee">
                 <div class="flex">
-                  <span><img src="./img/con0201.jpg" /></span>
-                  <span><img src="./img/con0202.jpg" /></span>
-                  <span><img src="./img/con0203.jpg" /></span>
-                  <span><img src="./img/con0201.jpg" /></span>
-                  <span><img src="./img/con0202.jpg" /></span>
-                  <span><img src="./img/con0203.jpg" /></span>
+                  <span class="r"><img src="./img/con0201.jpg" /></span>
+                  <span class="r"><img src="./img/con0202.jpg" /></span>
+                  <span class="r"><img src="./img/con0203.jpg" /></span>
+                  <span class="r"><img src="./img/con0201.jpg" /></span>
+                  <span class="r"><img src="./img/con0202.jpg" /></span>
+                  <span class="r"><img src="./img/con0203.jpg" /></span>
                 </div>
               </div>
             </div>
