--- a/trn03/index.html
+++ b/trn03/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/hamburgers.css" />
     <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/response.css" />
     <!--scss가 css로 컴파일 되므로 css로 불러오면됨-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -472,7 +473,7 @@
           </div>
           <footer>
             <div class="foot_top">
-              <div class="inner">
+              <div class="inner flex">
                 <ul>
                   <li><a href="">개인정보처리방침</a></li>
                   <li><a href="">고객상담</a></li>
