--- a/trn03/index.html
+++ b/trn03/index.html
@@ -151,6 +151,10 @@
             </li>
           </ul>
         </nav>
+        <div class="m_bt">
+          <span class="material-icons"> menu </span>
+          <span class="material-icons"> close </span>
+        </div>
       </div>
     </header>
     <div class="blog-slider swiper">
@@ -395,7 +399,7 @@
                 </ul>
               </div>
               <div class="con_right">
-                <a href="../category/tip.asp">
+                <a href="#!">
                   <h2>
                     <span>오뚜기의</span>
                     <span>쉽고 간단한</span>
